--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/mystyles.css">
     <title>Kaushal Bhogale</title>
 </head>
 <body>
-    Hi, I am Kaushal.
+    <h1 class="title is-1">Hi, I am Kaushal.</h1>
 </body>
 </html>
