Develop basic frontpage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <title>Kaushal Bhogale</title>
 </head>
 <body>
-    <h1 class="title is-1">Hi, I am Kaushal.</h1>
+
+    <br><br><br>
+
+    <div class="container">
+        
+        <div class="level">
+            <div class="level-right column has-text-centered">
+                <h1 class="title is-1 has-text-grey-dark">
+                    Hi, I am Kaushal.
+                </h1>
+                <h2 class="subtitle">Student, Programmer.</h2>
+            </div>
+            <div class="level-right column">
+                <div class="level-item">
+                        <figure class="image is-400x400">
+                            <img src="imgs/kaushal.png">
+                        </figure>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
