--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css">
     <title>Kaushal Bhogale</title>
 </head>
 <body>
 
-    <br><br><br>
-
+    <div class="hero is-fullheight">
     <div class="container">
-        
+            <br>
         <div class="level">
             <div class="level-right column has-text-centered">
+                <div class="animated fadeInRight">
                 <h1 class="title is-1 has-text-grey-dark">
                     Hi, I am Kaushal.
                 </h1>
                 <h2 class="subtitle">Student, Programmer.</h2>
             </div>
+            </div>
             <div class="level-right column">
                 <div class="level-item">
-                        <figure class="image is-400x400">
+                        <figure class="image is-400x400 animated fadeInLeft">
                             <img src="imgs/kaushal.png">
                         </figure>
                 </div>
@@ -30,5 +32,8 @@
         </div>
 
     </div>
+
+    </div>
+
 </body>
 </html>
