--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div class="hero is-fullheight">
+    <div class="hero is-fullheight has-background-grey">
     <div class="container">
             <br>
         <div class="level">
@@ -30,8 +30,81 @@
                 </div>
             </div>
         </div>
-
     </div>
+    </div>
+
+    <div id="projects" class="hero is-fullheight has-background-primary">
+        <div class="container">
+            <br><br><br>
+            <div class="title is-2 has-text-white">
+                Projects
+            </div>
+            <br>
+
+
+            <div class="column is-four-fifths">
+                <div class="card">
+                    <div class="columns">
+                        <div class="column card-content is-one-third is-paddingless">
+                            <figure class="image">
+                                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            </figure>
+                        </div>
+                        <div class="column">
+                            <div class="card-content">
+                                <div class="title is-5">Face verification and fraud detection of Ophtalmic images</div>
+                                <div class="subtitle is-6">Nov 2017-Feb 2018</div>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos, officiis omnis in fugiat consectetur laboriosam! Deleniti eum eaque veniam, non culpa similique ab repudiandae omnis veritatis recusandae quo ipsum!
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br><br>
+            
+            <div class="column is-four-fifths">
+                    <div class="card">
+                        <div class="columns">
+                            <div class="column card-content is-one-third is-paddingless">
+                                <figure class="image">
+                                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <div class="card-content">
+                                    <div class="title is-5">Face verification and fraud detection of Ophtalmic images</div>
+                                    <div class="subtitle is-6">Nov 2017-Feb 2018</div>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos, officiis omnis in fugiat consectetur laboriosam! Deleniti eum eaque veniam, non culpa similique ab repudiandae omnis veritatis recusandae quo ipsum!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br>
+
+                <div class="column is-four-fifths">
+                        <div class="card">
+                            <div class="columns">
+                                <div class="column card-content is-one-third is-paddingless">
+                                    <figure class="image">
+                                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                                    </figure>
+                                </div>
+                                <div class="column">
+                                    <div class="card-content">
+                                        <div class="title is-5">Face verification and fraud detection of Ophtalmic images</div>
+                                        <div class="subtitle is-6">Nov 2017-Feb 2018</div>
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos, officiis omnis in fugiat consectetur laboriosam! Deleniti eum eaque veniam, non culpa similique ab repudiandae omnis veritatis recusandae quo ipsum!
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <br><br>
+                    
+        </div>
 
     </div>
 
