--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Kaushal Bhogale</title>
 </head>
 <body>
@@ -14,9 +15,9 @@
 
         <div class="container">
         <div class="navbar-brand">
-            <!-- <figure class="image is-64x64 animated fadeInLeft">
-                <img src="imgs/logo.png">
-            </figure> -->
+            <figure class="image is-64x64 animated fadeInDown">
+                <img src="imgs/kb_logo/web.png">
+            </figure>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
@@ -27,7 +28,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
             <a class="navbar-item">
-               <strong>HOME</strong>
+               <strong>&nbsp;&nbsp;HOME</strong>
             </a>
 
             <a class="navbar-item">
