Add better animations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="container">
         <div class="navbar-brand">
-            <figure class="image is-64x64 animated fadeInDown">
+            <figure class="image is-64x64 animated bounce delay1">
                 <img src="imgs/kb_logo/web.png">
             </figure>
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -59,11 +59,12 @@
         <div class="tile">
 
             <div class="tile is-vertical is-7">
-                <h1 class="is-size-1">
+                <h1 id="heading" class="is-size-1 animated slideInUp">
                     <br>
                     Hey, I am Kaushal Bhogale!
                 </h1>
                 <br>
+                <div id="start-anim" class="animated slideInUp">
                 <p class="is-size-5">
                     I am a programmer.
                     I am currently pursuing my Bachelors Degree in Information Technology
@@ -103,12 +104,12 @@
                         <span>LinkedIn</span>
                     </a>
                 </p>
-
+                </div>
                 
             </div>
             <div class="tile is-1"></div>
             <div class="tile is-3">
-                <figure id="myimg" class="image is-256x256 animated fadeInLeft">
+                <figure id="myimg" class="image is-256x256 animated fadeIn delay0">
                     <img src="imgs/kb.png">
                 </figure>
             </div>
