Change animation style

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                     About me
                 </h1>
                 <br>
-                <div id="start-anim" class="animated slideInUp">
+                <div id="start-anim" class="animated fadeInUp">
                     <p class="is-size-5">
                         I like computers a lot. Right from my childhood, video games interested me. Not only because they were 
                         fun to play, but also because I was always curious about how these games were made. In the process of 
