--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     Hey, I am Kaushal Bhogale!
                 </h1>
                 <br>
-                <div id="start-anim" class="animated slideInUp has-text-justified">
+                <div id="start-anim" class="animated fadeInUp">
                 <p class="is-size-5">
                     I am a programmer.
                     I am currently pursuing my Bachelors Degree in Information Technology
