--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <title>Kaushal Bhogale</title>
 </head>
 <body>
@@ -34,10 +35,10 @@
             <a class="navbar-item" href="about.html">
                 <strong>ABOUT</strong>
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="projects.html">
                 <strong>PROJECTS</strong>
             </a>
-            <a class="navbar-item">
+            <a class="navbar-item" href="contact.html">
                 <strong>CONTACT</strong>
             </a>
             </div>
@@ -54,7 +55,7 @@
         </div>
     </div>
     </nav>
-    <div class="container">
+    <div class="container" id="content">
 
         <div class="tile">
 
@@ -147,3 +148,9 @@
       
       });
 </script>
+
+<style>
+    #content{
+        font-family: 'Roboto', sans-serif !important;
+    }
+</style>
