--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="navbar-item" href="about.html">
                 <strong>ABOUT</strong>
             </a>
-            <a class="navbar-item" href="projects.html">
+            <a class="navbar-item" href="https://github.com/kb-studios?tab=repositories">
                 <strong>PROJECTS</strong>
             </a>
             <a class="navbar-item" href="contact.html">
@@ -70,7 +70,7 @@
                     I am a programmer.
                     I am currently pursuing my Bachelors Degree in Information Technology
                     from Mumbai University.
-                    My research interests are in the field of Computer Vision, Reinforcement Learning and Computer Simulation.
+                    My research interests are in the field of Computer Vision and Reinforcement Learning.
                 </p>
                 <br>
                 <p class="is-size-5">
@@ -82,7 +82,7 @@
                 <p class="is-size-5">
                     During my undergraduate course, I got an oppurtunity
                     to work with many projects. You can find my 
-                    <a href="projects.html">projects</a> here.
+                    <a href="https://github.com/kb-studios?tab=repositories">projects</a> here.
                 </p>
                 <br>
                 <p class="buttons">
