Make buttons better for mobile

--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
           <span class="title">Kaushal Bhogale</span>
         </div>
 
-        <br><br><br><br>
+        <br><br>
 
         <div class="row white-text">
           <div class="col m4 s8 offset-s2">
+
+            <br><br>
             <img class="circle responsive-img" src="images/profile.jpg">
           </div>
 
           <div class="col m7 push-m1 s10 offset-s1">
+
+            <br><br>
             <div class="center-align" style="font-size: 1.3em;">
                        
                 <span style="font-size: 1.5em; font-family: 'Lobster Two', cursive;">-- Optimize for Happiness; in all directions. --</span>
@@ -41,15 +45,17 @@
                 Hi! I am Kaushal <i class="far fa-laugh-beam"></i> . I am currently pursuing my Masters Degree in Computational and Data Science from Indian Institute of Science, Bangalore. I work in the field of Computer Vision. Through this journey, I want to explore challenges that make vision (<i class="far fa-eye"></i>) so hard for computers and do my tiny bit to make these systems better. Head ahead to the links below to know more about me.
                 <br><br>
                 
-                <a href="https://github.com/kaushal-py" target="_blank" class="waves-effect waves-light btn-small blue black-text">
+                <a href="https://github.com/kaushal-py" target="_blank" class="waves-effect waves-light btn-small white black-text">
                   <i class="fab fa-github"></i>&nbsp; Github
                 </a>
-                <a href="https://www.linkedin.com/in/kaushal-bhogale/" target="_blankx" class="waves-effect waves-light btn-small blue black-text">
+                <a href="https://www.linkedin.com/in/kaushal-bhogale/" target="_blankx" class="waves-effect waves-light btn-small white black-text">
                   <i class="fab fa-linkedin"></i>&nbsp; LinkedIn
                 </a>
-                <a class="waves-effect waves-light btn-small blue black-text">
+                <a class="waves-effect waves-light btn-small white black-text">
                   <i class="material-icons left">email</i>Resume
                 </a>
+
+                <br><br>
               </div>
           </div>
         </div>
@@ -68,6 +74,10 @@
           background-color: #2196f3;
           padding-bottom: 30px;
           /* border-top: 2px dashed black; */
+        }
+
+        .btn-small{
+          margin-top: 10px;
         }
   
         .title{
