Style update and new resume

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
       <!-- Compiled and minified CSS -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
-
-
+      <!-- <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet"> -->
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;0,400;0,600;0,700;0,900;1,400&family=Sacramento&display=swap" rel="stylesheet">
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
@@ -27,7 +26,7 @@
 
         <br><br>
 
-        <div class="row white-text">
+        <div class="row black-text">
           <div class="col m4 s8 offset-s2">
 
             <br><br>
@@ -38,20 +37,20 @@
 
             <br><br>
             <div class="center-align" style="font-size: 1.3em;">
-                       
-                <span style="font-size: 1.5em; font-family: 'Lobster Two', cursive;">-- Optimize for Happiness; in all directions. --</span>
-                <br><br>
+                <br>
+                <span style="font-size: 2em; font-family: 'Sacramento', cursive;">Optimize for Happiness; in all directions.</span>
+                <br><br><br>
 
                 Hi! I am Kaushal <i class="far fa-laugh-beam"></i> . I am currently pursuing my Masters Degree in Computational and Data Science from Indian Institute of Science, Bangalore. I work in the field of Computer Vision. Through this journey, I want to explore challenges that make vision (<i class="far fa-eye"></i>) so hard for computers and do my tiny bit to make these systems better. Head ahead to the links below to know more about me.
                 <br><br>
                 
-                <a href="https://github.com/kaushal-py" target="_blank" class="waves-effect waves-light btn-small white black-text">
+                <a href="https://github.com/kaushal-py" target="_blank" class="waves-effect waves-light btn-small black-text">
                   <i class="fab fa-github"></i>&nbsp; Github
                 </a>
-                <a href="https://www.linkedin.com/in/kaushal-bhogale/" target="_blankx" class="waves-effect waves-light btn-small white black-text">
+                <a href="https://www.linkedin.com/in/kaushal-bhogale/" target="_blankx" class="waves-effect waves-light btn-small black-text">
                   <i class="fab fa-linkedin"></i>&nbsp; LinkedIn
                 </a>
-                <a class="waves-effect waves-light btn-small white black-text">
+                <a href="Kaushal-Bhogale-resume.pdf" target="_blankx" class="waves-effect waves-light btn-small black-text">
                   <i class="material-icons left">email</i>Resume
                 </a>
 
@@ -67,8 +66,8 @@
       <style>
 
         body{
-          background-color: #111;
-        }
+          background-color:#fafafa;
+          font-family: 'Raleway', sans-serif; }
 
         #top-border{
           background-color: #2196f3;
@@ -78,14 +77,25 @@
 
         .btn-small{
           margin-top: 10px;
+          background-color: white !important;
+          border: 1px solid #2196f3;
+          margin-right: 5px;
+        }
+
+        .btn-small:hover{
+          margin-top: 10px;
+          color:white !important;
+          background-color: #2196f3 !important;
+          border: 1px solid #2196f3;
         }
   
         .title{
           font-size: 2.5em;
-          color: white;
+          color: #2196f3;
           padding: 0px 30px;
-          border-bottom: 10px double #2196f3;
-          font-family: 'Lobster Two', cursive;
+          border-bottom: 1px solid #2196f3;
+          font-family: 'Raleway', sans-serif;
+          font-weight: thin;
         }
   
       </style>
