--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <br><br>
             <div class="center-align" style="font-size: 1.3em;">
                 <br>
-                <span style="font-size: 2em; font-family: 'Sacramento', cursive;">Optimize for Happiness; in all directions.</span>
+                <span style="font-size: 2em; font-family: 'Sacramento', cursive;">Optimize for Happyness; in all directions.</span>
                 <br><br><br>
 
                 Hi! I am Kaushal <i class="far fa-laugh-beam"></i> . I am currently pursuing my Masters Degree in Computational and Data Science from Indian Institute of Science, Bangalore. I work in the field of Computer Vision. Through this journey, I want to explore challenges that make vision (<i class="far fa-eye"></i>) so hard for computers and do my tiny bit to make these systems better. Head ahead to the links below to know more about me.
